[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://intro/badges.tscn" type="PackedScene" id=2]
[ext_resource path="res://intro/script/pause_menu.gd" type="Script" id=3]
[ext_resource path="res://intro/Spell_Book.tscn" type="PackedScene" id=4]
[ext_resource path="res://intro/settings.tscn" type="PackedScene" id=5]
[ext_resource path="res://intro/save_files.tscn" type="PackedScene" id=6]
[ext_resource path="res://intro/back_to_menu.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 1 )

[node name="pause_menu" type="CanvasLayer"]
pause_mode = 2

[node name="pause_menu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="pause_menu"]
visible = false
self_modulate = Color( 1, 1, 1, 0.941176 )
margin_left = -1.0
margin_top = -1.0
margin_right = 322.0
margin_bottom = 182.0

[node name="VBoxContainer" type="VBoxContainer" parent="pause_menu/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.5
margin_top = -69.5
margin_right = 48.5
margin_bottom = 70.5
alignment = 1

[node name="resume" type="Button" parent="pause_menu/Panel/VBoxContainer"]
margin_top = 5.0
margin_right = 95.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
text = "Resume"

[node name="save" type="Button" parent="pause_menu/Panel/VBoxContainer"]
margin_top = 24.0
margin_right = 95.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 3 )
text = "save"

[node name="restart" type="Button" parent="pause_menu/Panel/VBoxContainer"]
margin_top = 43.0
margin_right = 95.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 3 )
text = "Restart"

[node name="option" type="Button" parent="pause_menu/Panel/VBoxContainer"]
margin_top = 62.0
margin_right = 95.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 3 )
text = "option"

[node name="badges" type="Button" parent="pause_menu/Panel/VBoxContainer"]
margin_top = 81.0
margin_right = 95.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 3 )
text = "badges"

[node name="spellbook" type="Button" parent="pause_menu/Panel/VBoxContainer"]
margin_top = 100.0
margin_right = 95.0
margin_bottom = 115.0
custom_fonts/font = SubResource( 3 )
text = "spellbook"

[node name="bact_to_menu" type="Button" parent="pause_menu/Panel/VBoxContainer"]
margin_top = 119.0
margin_right = 95.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 3 )
text = "back to menu"

[node name="badges" parent="pause_menu" instance=ExtResource( 2 )]

[node name="Spell_Book" parent="pause_menu" instance=ExtResource( 4 )]

[node name="settings" parent="pause_menu" instance=ExtResource( 5 )]

[node name="save_files" parent="pause_menu" instance=ExtResource( 6 )]

[node name="back_to_menu" parent="pause_menu" instance=ExtResource( 7 )]

[connection signal="pressed" from="pause_menu/Panel/VBoxContainer/save" to="pause_menu" method="_on_save_pressed"]
[connection signal="pressed" from="pause_menu/Panel/VBoxContainer/restart" to="pause_menu" method="_on_restart_pressed"]
[connection signal="pressed" from="pause_menu/Panel/VBoxContainer/option" to="pause_menu" method="_on_option_pressed"]
[connection signal="pressed" from="pause_menu/Panel/VBoxContainer/badges" to="pause_menu" method="_on_badges_pressed"]
[connection signal="pressed" from="pause_menu/Panel/VBoxContainer/spellbook" to="pause_menu" method="_on_spellbook_pressed"]
[connection signal="pressed" from="pause_menu/Panel/VBoxContainer/bact_to_menu" to="pause_menu" method="_on_bact_to_menu_pressed"]

[editable path="pause_menu/badges"]
